--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,4 +29,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags: your-dockerhub-username/your-image-name:1.0
+        tags: antonimoragues/prova:1.01
