--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,12 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Get the tag name
+      run: echo "Tag: ${GITHUB_REF#refs/tags/}"
+
+    - name: Build and deploy
+      run: echo "Deploying version ${GITHUB_REF#refs/tags/}"
+      
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
