--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,8 +2,8 @@ name: Build & Push Docker Image
 
 on:
   push:
-    branches:
-      - main  # Run only on changes to main branch
+    tags:
+      - 'v*'  # Triggers only on tags like v1.0.0, v2.1.3, etc.
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
