--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Build & Push Docker Image
 on:
   push:
     tags:
-      - 'v*'  # Triggers only on tags like v1.0.0, v2.1.3, etc.
+      - 'v*'  # Triggers only on tags like v1.0.0, v2.1.3, etc
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
