--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and deploy
-      run: echo "Deploying version ${GITHUB_REF#refs/tags/}"
+      run: echo "Deploying version ${GITHUB_REF_NAME}"
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
