--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -26,6 +26,21 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    - name: Sanitize Tag Name
+      id: tag
+      run: |
+        TAG=$(echo ${GITHUB_REF_NAME} | sed 's/[^a-zA-Z0-9_.-]/-/g')
+        echo "Sanitized Tag: $TAG"
+        echo "TAG=$TAG" >> $GITHUB_ENV
+
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: antonimoragues/prova:${{ env.TAG }}
+
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v4
       with:
