--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
 name: Deploy to EKS
 
 on:
-  push:
-    branches:
-      - main  # Run this workflow on push to the main branch
+  workflow_dispatch:  # Enables manual triggering
 
 jobs:
   deploy:
