--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,12 @@ jobs:
         run: |
           aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
 
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          repository: amoragues/daw  # Replace with the actual repository
+          token: ${{ secrets.GH_PAT }}  # If it's a private repo, store a GitHub PAT in secrets
+
       - name: Deploy to EKS
         run: |
           #kubectl set image deployment/my-app my-app=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-app:latest --namespace default
