--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
         run: |
           aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
 
+      - name: Change directory before checkout
+        run: cd /home/daw
+        
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
@@ -33,4 +36,4 @@ jobs:
         run: |
           #kubectl set image deployment/my-app my-app=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-app:latest --namespace default
           #kubectl rollout status deployment/my-app --namespace default
-          kubectl apply -f nginx-deployment.yaml
+          kubectl apply -f daw/nginx-deployment.yaml
