--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           git config --global user.name "antonimoragues"
           git config --global user.email "amoragues@politecnicllevant.cat"
+          git config --global url."https://antonimoragues:${{ secrets.GH_PAT }}@github.com".insteadOf "https://github.com"
           
       - name: Checkout repository
         uses: actions/checkout@v4
