--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,6 @@ jobs:
       - name: Update kubeconfig for EKS
         run: |
           aws eks update-kubeconfig --name ${{ secrets.EKS_CLUSTER_NAME }} --region ${{ secrets.AWS_REGION }}
-
-      - name: Change directory before checkout
-        run: cd /home
         
       - name: Set up Git user details
         run: |
@@ -38,9 +35,10 @@ jobs:
           repository: antonimoragues/daw  # Replace with the actual repository
           #token: ${{ secrets.GH_PAT }}  # If it's a private repo, store a GitHub PAT in secrets
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Usa una clave SSH en lugar de un token
+          path: manifests  # Clone into 'manifests' directory
 
       - name: Deploy to EKS
         run: |
           #kubectl set image deployment/my-app my-app=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-app:latest --namespace default
           #kubectl rollout status deployment/my-app --namespace default
-          kubectl apply -f daw/nginx-deployment.yaml
+          kubectl apply -f manifests/nginx-deployment.yaml
