--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,15 +27,17 @@ jobs:
         run: |
           git config --global user.name "antonimoragues"
           git config --global user.email "amoragues@politecnicllevant.cat"
-          #git config --global url."https://antonimoragues:${{ secrets.GH_PAT }}@github.com".insteadOf "https://github.com"
           
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           repository: antonimoragues/daw  # Replace with the actual repository
-          #token: ${{ secrets.GH_PAT }}  # If it's a private repo, store a GitHub PAT in secrets
           ssh-key: ${{ secrets.SSH_PRIVATE_KEY }}  # Usa una clave SSH en lugar de un token
           path: manifests  # Clone into 'manifests' directory
+
+      - name: Update Image Tag in Kustomization
+        run: |
+          sed -i 's|newTag: .*|newTag: v1.1|' manifests/nginx-deployment.yaml
 
       - name: Deploy to EKS
         run: |
