--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,11 @@ jobs:
 
       - name: Update Image Tag in Kustomization
         run: |
-          sed -i 's|newTag: .*|newTag: v1.1|' manifests/nginx-deployment.yaml
+          sed -i 's|newTag: .*|newTag: 1.1|' manifests/overlays/dev/kustomization.yaml
 
       - name: Deploy to EKS
         run: |
           #kubectl set image deployment/my-app my-app=${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ secrets.AWS_REGION }}.amazonaws.com/my-app:latest --namespace default
           #kubectl rollout status deployment/my-app --namespace default
           kubectl delete deployment deployment-nginx
-          kubectl apply -f manifests/nginx-deployment.yaml
+          kubectl apply -f manifests/overlays/dev
