--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Update Image Tag in Kustomization
         run: |
-          sed -i 's|newTag: .*|newTag: 1.1|' manifests/overlays/dev/kustomization.yaml
+          sed -i 's|newTag: .*|newTag: "1.1"|' manifests/overlays/dev/kustomization.yaml
 
       - name: Deploy to EKS
         run: |
