--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: Deploy to EKS
 
 on:
-  workflow_dispatch:  # Enables manual triggering
+  push:
+    tags:
+      - 'v*'  # Triggers only on tags like v1.0.0, v2.1.3, etc
+  workflow_dispatch:  # Allow manual trigger
 
 jobs:
   deploy:
