--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,12 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - name: Sanitize Tag Name
+        id: tag
+        run: |
+          TAG=$(echo ${GITHUB_REF_NAME} | sed 's/[^a-zA-Z0-9_.-]/-/g')
+          echo "Sanitized Tag: $TAG"
+          echo "TAG=$TAG" >> $GITHUB_ENV
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
