--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to EKS
 on:
   push:
     tags:
-      - 'v*'  # Triggers only on tags like v1.0.0, v2.1.3, etc
+      - '*'  # v* Triggers only on tags like v1.0.0, v2.1.3, etc
   workflow_dispatch:  # Allow manual trigger
 
 jobs:
@@ -45,7 +45,7 @@ jobs:
       - name: Update Image Tag in Kustomization
         run: |
           #sed -i 's|newTag: .*|newTag: "1.1"|' manifests/overlays/dev/kustomization.yaml
-          sed -i "s/\(newTag:\) .*/\1 \"$TAG\"/" manifests/overlays/dev/kustomization.yaml
+          sed -i "s/\(newTag:\) .*/\1 \"${{ env.TAG }}\"/" manifests/overlays/dev/kustomization.yaml
 
       - name: Deploy to EKS
         run: |
